--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.bg-content1 {
+  background-color: #1a202c;
+}
 /* Hide default scrollbar */
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
@@ -30,11 +33,16 @@
   font-family: 'kaotika';
   src: url('../fonts/kaotika.ttf') format('truetype');
 }
+html {
+  height: 100%;
+}
+
 
 body {
   font-family: 'kaotika', serif;
   background-color: #1a202c;
   color: #f9d564;
+  min-height: 100%;
 }
 
 @layer utilities {
@@ -70,3 +78,13 @@ header a {
 header a:hover {
   color: #ffd700; 
 }
+
+
+
+td span{
+  color: white;
+  font-size: xx-large ;
+}
+
+
+
