--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,3 +100,18 @@ header a:hover {
   }
 }
 
+.row-container-animation {
+  animation: scaleUpAndDown 0.5s ease-out forwards;
+}
+
+@keyframes scaleUpAndDown {
+  0% {
+    transform: scale(1.02);
+  }
+  50% {
+    transform: scale(1.04);
+  }
+  100% {
+    transform: scale(1.00);
+  }
+}
